--- a/TC3045/Parcial_uno/ctcosx/ctc.ini
+++ b/TC3045/Parcial_uno/ctcosx/ctc.ini
@@ -493,9 +493,9 @@ EXECUTION_COST_TYPE = Clock ticks
   OPTFILE  = @
   OPT_NO_OPTFILE =
 
-  PARAMS          = 
-  PARAMS_SEPARATE = 
-  PARAMS_OPTIONAL = 
+  PARAMS          =
+  PARAMS_SEPARATE =
+  PARAMS_OPTIONAL =
   PARAMS_LIST     =
   PARAMS_LIST_SEPARATOR =
 
@@ -507,7 +507,7 @@ EXECUTION_COST_TYPE = Clock ticks
   OPT_NO_LINK =
 
   LIBRARY = -L/usr/local/lib,-lctc,-ldl,-lpthread,-framework,CoreFoundation,-framework,IOKit
- 
+
   TMP_DIRECTORY = /tmp
   MAX_CMDLINE_LENGTH =
 
@@ -745,4 +745,15 @@ EXECUTION_COST_TYPE = Clock ticks
   TMP_DIRECTORY = /tmp
   MAX_CMDLINE_LENGTH =
 
+  CTC++ 8.1.x
+  =============
+  EXPIRATION=14 Feb 2017
+  CONTROL=PEQZHGEWKNLI
+
+
+
+
+
+
+  
 # --- end of ctc.ini file ---
